bk_ida/gccida/g1/refers_to_regno_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1765:6: error: use of undeclared identifier 'v26'
rtx *v26; // r13 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1788:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v16 = ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)v4 + 2)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1817:20: error: expected expression
if ( loc != ( rtx *)v4->fld ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1822:20: error: expected expression
if ( loc != ( rtx *)rtx->fld ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1839:20: error: expected expression
if ( loc == ( rtx *)&v4[1] ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1841:12: error: expected ';' after expression
v4 = ( rtx)v4[1]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1848:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v11.rtwint = ( __int64)v4->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1857:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v13 = ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)v4 + 2)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1887:14: error: expected expression
v10 = ( rtx *)v4 + v8; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1916:14: error: expected expression
v26 = ( rtx *)*v10 + v25; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1916:1: error: use of undeclared identifier 'v26'
v26 = ( rtx *)*v10 + v25; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1917:18: error: use of undeclared identifier 'v26'; did you mean 'v23'?
v28 = ( __int64)&v26[-( v25 - 1) - 1]; 
                 ^~~
                 v23
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1762:18: note: 'v23' declared here
 struct rtx_def *v23; // rdx 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1918:9: error: use of undeclared identifier 'v26'
while ( v26 == loc || !refers_to_regno_p( regno, endregno, *v26, loc) ) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1918:61: error: use of undeclared identifier 'v26'
while ( v26 == loc || !refers_to_regno_p( regno, endregno, *v26, loc) ) 
                                                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/rtlanal.c:1920:13: error: expected expression
if ( ( rtx *)v28 == --v26 ) 
            ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_p/src/obj/rtlanal.o] Error 1
